--- a/inbex.html
+++ b/inbex.html
@@ -7,19 +7,15 @@
 </head>
 <body>
 <div class="grid">
-	<div class="grid-item grid-item1"></div>
-	<div class="grid-item grid-item2"><img src="./assets/black_bishop-512.png" alt="" width="200px" align="center"></div>
-	<div class="grid-item grid-item3"></div>
-	<div class="grid-item grid-item4"><img src="./assets/white_knight-512.png" alt="" width="200px" align="center"></div>
-	<div class="grid-item grid-item5"></div>
-	<div class="grid-item grid-item6"></div>
-	<div class="grid-item grid-item7"></div>
-	<div class="grid-item grid-item8"><img src="./assets/white_rook-512.png" alt="" width="200px" align="center"></div>
-	<div class="grid-item grid-item9"></div>
-
-</div
-
-
+	<div class="grid-item1"></div>
+	<div class="grid-item2"><span><img src="./assets/black_bishop-512.png" alt="Chess"></span></div>
+	<div class="grid-item3"></div>
+	<div class="grid-item4"><span><img src="./assets/white_knight-512.png" alt="Chess"></span></div>
+	<div class="grid-item5"></div>
+	<div class="grid-item6"></div>
+	<div class="grid-item7"></div>
+	<div class="grid-item8"><span><img src="./assets/white_rook-512.png" alt="Chess"></span></div>
+	<div class="grid-item9"></div>
 
 
 </div>
